syntax = "proto3";

package user;

service User {
    rpc GetUserInfo (GetUserRequest) returns (GetUserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message MsgUser {
    string userId = 1; // 用户id
    string updateTime = 2; // 更新时间
    string createTime = 3; // 创建时间
    string userName = 4; // 用户姓名
}

// logout
message LogoutRequest {
    string userId = 1;
}

message LogoutResponse {
    MsgUser data = 1;
}

// login
message LoginRequest {
    string userId = 1;
}

message LoginResponse {
    MsgUser data = 1;
}

// get user
message GetUserRequest {
    string userId = 1;
}

message GetUserResponse {
    // repeated 修饰符表示字段是可变数组，即 slice 类型
    MsgUser data = 1;
}
